# cpp-luajit-udp-logger

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  ai_consultation.py
docs/: ai_consultation_results.json  ai_consultation_summary.md  api_reference.md  build_guide_vs.md
include/: lua_udp_logger.h
lua_scripts/: test_example.lua  udp_logger_binding.lua  udp_receiver.lua
src/: console_logger.cpp  udp_sender.cpp
